add related events

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#VBSD_series">VBSD Series</a></li>
+          <li><a href="#related_events">Related Events</a></li>
 <!--          
           <li><a href="#speakers">Speakers</a></li>
           <li><a href="#schedule">Schedule</a></li>
@@ -188,6 +189,40 @@
             </div>
           </div>
 -->
+        </div>
+
+      </div>
+
+    </section>
+
+
+  <!--==========================
+    Related Events
+  ============================-->
+
+
+<section id="related_events" class="section-with-bg wow fadeInUp">
+
+      <div class="container">
+        <div class="section-header">
+          <h2>Related Events</h2>
+          <p>In Conjunction with the Following Conferences</p>
+        </div>
+
+        <div class="row no-gutters supporters-wrap clearfix">
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <a href="https://wvasbsd.github.io/2020/index.html"><img src="img/related_events/wacv20.png" class="img-fluid" alt=""></a>
+            </div>
+          </div>
+		  
+		  <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <a href="https://sites.google.com/prod/view/fair-data-efficient-trusted-cv/home"><img src="img/related_events/cvpr20.jpg" class="img-fluid" alt=""></a>
+            </div>
+          </div>
+        
         </div>
 
       </div>
