update keynote speakers

--- a/eccv20/index.html
+++ b/eccv20/index.html
@@ -209,6 +209,23 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
+              <img src="img/speakers/Jianping_Shi.png" alt="Jianping Shi" class="img-fluid" style="width:100%;padding-bottom: 12px">
+              <div class="details">
+                <h3><a href="speaker-details.html#Jianping_Shi">Jianping Shi</a></h3>
+                <p>SenseTime Group Ltd</p>
+                <div class="social">
+                  <!--
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                  -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
               <img src="img/speakers/Laurens_van_der_Maaten.png" alt="Laurens van der Maaten" class="img-fluid" style="width:100%;padding-bottom: 97px">
               <div class="details">
                 <h3><a href="speaker-details.html#Laurens_van_der_Maaten">Laurens van der Maaten</a></h3>
@@ -224,22 +241,8 @@
               </div>
             </div>
           </div>
+          
 <!--
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/Manolis_Savva.jpg" alt="Manolis Savva" class="img-fluid" style="width:100%;padding-bottom: 92px">
-              <div class="details">
-                <h3><a href="speaker-details.html#Manolis_Savva">Manolis Savva</a></h3>
-                <p>Simon Fraser University & Facebook AI Research</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
               <img src="img/speakers/Christian_Theobalt.jpg" alt="Christian Theobalt" class="img-fluid" style="width:100%">
