--- a/eccv20/speaker-details.html
+++ b/eccv20/speaker-details.html
@@ -208,12 +208,12 @@
 
         <div class="row">
           <div class="col-md-6">
-            <img src="img/speakers/Laurens_van_der_Maaten.png" alt="Laurens van der Maaten" class="img-fluid" style="width:100%">
+            <img src="img/speakers/Jianping_Shi.png" alt="Jianping Shi" class="img-fluid" style="width:100%;padding-bottom: 0px">
           </div>
           <div class="col-md-6">
             <div class="details">
-              <h2 id="Laurens_van_der_Maaten"><a href="https://lvdmaaten.github.io/">Laurens van der Maaten</a></h2>
-              <p>Google Brain</p>
+              <h2 id="Jianping_Shi"><a href="https://shijianping.me/">Jianping Shi</a></h2>
+              <p>SenseTime Group Ltd</p>
               <div class="social">
                 <!--
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -229,6 +229,34 @@
             </div>
           </div>
         </div>
+
+        <p></p>
+
+        <div class="row">
+          <div class="col-md-6">
+            <img src="img/speakers/Laurens_van_der_Maaten.png" alt="Laurens van der Maaten" class="img-fluid" style="width:100%">
+          </div>
+          <div class="col-md-6">
+            <div class="details">
+              <h2 id="Laurens_van_der_Maaten"><a href="https://lvdmaaten.github.io/">Laurens van der Maaten</a></h2>
+              <p>Facebook AI Research</p>
+              <div class="social">
+                <!--
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                -->
+              </div>
+              <p>Bio:<br>TBD</p>
+              <p>Keynote Abstract:<br>TBD</p> 
+
+
+            </div>
+          </div>
+        </div>
+
+        
 
 
 
