--- a/eccv20/index.html
+++ b/eccv20/index.html
@@ -347,7 +347,7 @@
             </div>
 			
 			<div class="row schedule-item">
-              <div class="col-md-2"><time>09:05 AM</time></div>
+              <div class="col-md-2"><time>09:00 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="" alt="">
@@ -358,7 +358,7 @@
             </div>
 			
 			<div class="row schedule-item">
-              <div class="col-md-2"><time>09:40 AM</time></div>
+              <div class="col-md-2"><time>09:30 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="" alt="">
@@ -369,7 +369,7 @@
             </div>
 			
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:15 AM</time></div>
+              <div class="col-md-2"><time>10:00 AM</time></div>
               <div class="col-md-10">
                 <h4>Coffee Break</h4>
                 <!-- <p>TBD</p> -->
@@ -377,7 +377,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>10:30 AM</time></div>
+              <div class="col-md-2"><time>10:15 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="" alt="">
@@ -388,7 +388,7 @@
             </div>
 			
 			<div class="row schedule-item">
-              <div class="col-md-2"><time>11:05 AM</time></div>
+              <div class="col-md-2"><time>10:45 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="" alt="">
@@ -399,7 +399,7 @@
             </div>
 			
 			<div class="row schedule-item">
-              <div class="col-md-2"><time>11:40 AM</time></div>
+              <div class="col-md-2"><time>11:15 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="" alt="">
@@ -409,6 +409,17 @@
               </div>
             </div>
 			
+		  <div class="row schedule-item">
+              <div class="col-md-2"><time>11:45 AM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="" alt="">
+                </div>
+                <h4>Keynote <span>TBD</span></h4>
+                <p>TBD</p>
+              </div>
+            </div>
+		  
             <div class="row schedule-item">
               <div class="col-md-2"><time>12:15 PM</time></div>
               <div class="col-md-10">
