--- a/eccv20/index.html
+++ b/eccv20/index.html
@@ -241,6 +241,23 @@
               </div>
             </div>
           </div>
+	  <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/Patrick_Perez.jpg" alt="Patrick Perez" class="img-fluid" style="width:100%;padding-bottom: 97px">
+              <div class="details">
+                <h3><a href="speaker-details.html#Patrick_Perez">Patrick Pérez</a></h3>
+                <p>valeo.ai</p>
+                <div class="social">
+                  <!--
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                  -->
+                </div>
+              </div>
+            </div>
+          </div>
           
 <!--
           <div class="col-lg-4 col-md-6">
