--- a/eccv20/index.html
+++ b/eccv20/index.html
@@ -243,7 +243,7 @@
           </div>
 	  <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/Patrick_Perez.jpg" alt="Patrick Perez" class="img-fluid" style="width:100%;padding-bottom: 97px">
+              <img src="img/speakers/Patrick_Perez.jpg" alt="Patrick Perez" class="img-fluid" style="width:100%;padding-bottom: 67px">
               <div class="details">
                 <h3><a href="speaker-details.html#Patrick_Perez">Patrick Pérez</a></h3>
                 <p>valeo.ai</p>
@@ -384,17 +384,9 @@
                 <p>TBD</p>
               </div>
             </div>
-			
+		  
             <div class="row schedule-item">
               <div class="col-md-2"><time>10:00 AM</time></div>
-              <div class="col-md-10">
-                <h4>Coffee Break</h4>
-                <!-- <p>TBD</p> -->
-              </div>
-            </div>
-
-            <div class="row schedule-item">
-              <div class="col-md-2"><time>10:15 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="" alt="">
@@ -404,7 +396,15 @@
               </div>
             </div>
 			
-			<div class="row schedule-item">
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>10:30 AM</time></div>
+              <div class="col-md-10">
+                <h4>Coffee Break</h4>
+                <!-- <p>TBD</p> -->
+              </div>
+            </div>
+
+            <div class="row schedule-item">
               <div class="col-md-2"><time>10:45 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
@@ -426,8 +426,19 @@
               </div>
             </div>
 			
-		  <div class="row schedule-item">
+			<div class="row schedule-item">
               <div class="col-md-2"><time>11:45 AM</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="" alt="">
+                </div>
+                <h4>Keynote <span>TBD</span></h4>
+                <p>TBD</p>
+              </div>
+            </div>
+			
+		  <div class="row schedule-item">
+              <div class="col-md-2"><time>12:15 AM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="" alt="">
@@ -438,7 +449,7 @@
             </div>
 		  
             <div class="row schedule-item">
-              <div class="col-md-2"><time>12:15 PM</time></div>
+              <div class="col-md-2"><time>12:45 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="img/organizers/Kuan-Chuan_Peng.jpg" alt="Kuan-Chuan Peng">
