--- a/eccv20/speaker-details.html
+++ b/eccv20/speaker-details.html
@@ -256,7 +256,31 @@
           </div>
         </div>
 
-        
+        <p></p>
+
+        <div class="row">
+          <div class="col-md-6">
+            <img src="img/speakers/Patrick_Perez.jpg" alt="Patrick Pérez" class="img-fluid" style="width:100%">
+          </div>
+          <div class="col-md-6">
+            <div class="details">
+              <h2 id="Patrick_Perez"><a href="https://ptrckprz.github.io/">Patrick Pérez</a></h2>
+              <p>valeo.ai</p>
+              <div class="social">
+                <!--
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                -->
+              </div>
+              <p>Bio:<br>TBD</p>
+              <p>Keynote Abstract:<br>TBD</p> 
+
+
+            </div>
+          </div>
+        </div>
 
 
 
