--- a/index.html
+++ b/index.html
@@ -217,9 +217,15 @@
             </div>
           </div>
 		  
-		  <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <a href="https://sites.google.com/prod/view/fair-data-efficient-trusted-cv/home"><img src="img/related_events/cvpr20.jpg" class="img-fluid" alt=""></a>
+            </div>
+          </div>
+		
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <a href="https://wvasbsd.github.io/2021/index.html"><img src="img/related_events/wacv21.png" class="img-fluid" alt=""></a>
             </div>
           </div>
         
