re-organize workshop series

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#VBSD_series">VBSD Series</a></li>
+		  <li><a href="#TCV_series">TCV Series</a></li>
+		  <li><a href="#VASBSD_series">VASBSD Series</a></li>
           <li><a href="#related_events">Related Events</a></li>
 <!--          
           <li><a href="#speakers">Speakers</a></li>
@@ -201,7 +203,7 @@
   ============================-->
 
 
-<section id="VBSD_series" class="section-with-bg wow fadeInUp">
+<section id="TCV_series" class="section-with-bg wow fadeInUp">
 
       <div class="container">
         <div class="section-header">
@@ -234,7 +236,7 @@
   ============================-->
 
 
-<section id="related_events" class="section-with-bg wow fadeInUp">
+<section id="VASBSD_series" class="section-with-bg wow fadeInUp">
 
       <div class="container">
         <div class="section-header">
@@ -267,7 +269,7 @@
   ============================-->
 
 
-<section id="VBSD_series" class="section-with-bg wow fadeInUp">
+<section id="related_events" class="section-with-bg wow fadeInUp">
 
       <div class="container">
         <div class="section-header">
