--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@
               <a href="https://fadetrcv.github.io/2021/" target="_blank" rel="noopener noreferrer"><img src="img/tcv/cvpr21.jpg" class="img-fluid" alt=""></a>
             </div>
           </div>
+		  
+		  <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <a href="https://fadetrcv.github.io/2022/" target="_blank" rel="noopener noreferrer"><img src="img/tcv/cvpr22.png" class="img-fluid" alt=""></a>
+            </div>
+          </div>
         
         </div>
 
@@ -366,7 +372,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
         -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/" target="_blank" rel="noopener noreferrer">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- #footer -->
