--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/aaai22.png" rel="icon">
-  <link href="img/aaai22.png" rel="apple-touch-icon">
+  <link href="img/eccv22.png" rel="icon">
+  <link href="img/eccv22.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
@@ -142,13 +142,13 @@
               <a href="https://wvbsd.github.io/2019/index.html" target="_blank" rel="noopener noreferrer"><img src="img/vbsd/cvpr19.png" class="img-fluid" alt=""></a>
             </div>
           </div>
-<!--		  
+		  
 		  <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <a href="2020/index.html"><img src="img/series/cvpr20.jpg" class="img-fluid" alt=""></a>
+              <a href="https://wvbsd.github.io/2022/index.html"><img src="img/vbsd/eccv22.png" class="img-fluid" alt=""></a>
             </div>
           </div>
-          
+<!--          
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="img/series/wacv20.png" class="img-fluid" alt="">
