--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/eccv22.png" rel="icon">
-  <link href="img/eccv22.png" rel="apple-touch-icon">
+  <link href="img/cvpr23.png" rel="icon">
+  <link href="img/cvpr23.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
@@ -228,6 +228,12 @@
 		  <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <a href="https://fadetrcv.github.io/2022/" target="_blank" rel="noopener noreferrer"><img src="img/tcv/cvpr22.png" class="img-fluid" alt=""></a>
+            </div>
+          </div>
+		  
+		  <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <a href="https://fadetrcv.github.io/2023/" target="_blank" rel="noopener noreferrer"><img src="img/tcv/cvpr23.png" class="img-fluid" alt=""></a>
             </div>
           </div>
         
