--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		  
 		  <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <a href="https://wvbsd.github.io/2022/index.html"><img src="img/vbsd/eccv22.png" class="img-fluid" alt=""></a>
+              <a href="https://wvbsd.github.io/2022/index.html" target="_blank" rel="noopener noreferrer"><img src="img/vbsd/eccv22.png" class="img-fluid" alt=""></a>
             </div>
           </div>
 <!--          
