--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 		  <li><a href="#TCV_series">TCV Series</a></li>
 		  <li><a href="#VASBSD_series">VASBSD Series</a></li>
 		  <li><a href="#AIBSD_series">AIBSD Series</a></li>
+		  <li><a href="#AR_series">AR Series</a></li>
           <li><a href="#related_events">Related Events</a></li>
 <!--          
           <li><a href="#speakers">Speakers</a></li>
