--- a/index.html
+++ b/index.html
@@ -345,6 +345,12 @@
               <a href="https://marworkshop.github.io/cvpr24/index.html" target="_blank" rel="noopener noreferrer"><img src="img/ar/cvpr24.jpg" class="img-fluid" alt=""></a>
             </div>
           </div>
+		  
+		  <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <a href="https://marworkshop.github.io/neurips24/index.html" target="_blank" rel="noopener noreferrer"><img src="img/ar/nips24.png" class="img-fluid" alt=""></a>
+            </div>
+          </div>
         
         </div>
 
