--- a/index.html
+++ b/index.html
@@ -379,6 +379,12 @@
               <a href="https://adfmw.github.io/ijcai24/index.html" target="_blank" rel="noopener noreferrer"><img src="img/other/ijcai24.png" class="img-fluid" alt=""></a>
             </div>
           </div>
+		  
+		  <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <a href="https://seasworkshop.github.io/aaai25/index.html" target="_blank" rel="noopener noreferrer"><img src="img/other/aaai25.png" class="img-fluid" alt=""></a>
+            </div>
+          </div>
         
         </div>
 
