--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Other Related Event</h2>
-          <p>In Conjunction with the Following Conference</p>
+          <p>In Conjunction with the Following Conferences</p>
         </div>
 		  
 		  <div class="row no-gutters supporters-wrap clearfix">
