--- a/index.html
+++ b/index.html
@@ -318,6 +318,12 @@
               <a href="https://aibsdworkshop.github.io/2024/index.html" target="_blank" rel="noopener noreferrer"><img src="img/aibsd/aaai24.v2.png" class="img-fluid" alt=""></a>
             </div>
           </div>
+		  
+		  <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <a href="https://aibsdworkshop.github.io/2026/index.html" target="_blank" rel="noopener noreferrer"><img src="img/aibsd/aaai26.png" class="img-fluid" alt=""></a>
+            </div>
+          </div>
         
         </div>
 
